[6.0] Fix some spacing issues in incognito mode

--- a/edge-vertical-tabs.css
+++ b/edge-vertical-tabs.css
@@ -138,7 +138,6 @@ v1.2.9: Added hover delay (Thanks to u/TwisterMc!)
     color: var(--colorFg) !important;
     background-color: var(--colorBg);
     height: 100%;
-    top: 0;
     width: 250px !important;
     padding-top: 25px;
     transition-property: width;
@@ -167,7 +166,6 @@ v1.2.9: Added hover delay (Thanks to u/TwisterMc!)
     height: 100%;
     position: fixed;
     background-color: var(--colorBg);
-    top: 0;
     left: 0;
     padding-top: 25px;
 }
